Bug 1305120: CPU microcode as a separate field in the crash report. r=ted.mielczarek

MozReview-Commit-ID: 9g8ku4Et6sM